--- a/css/style.css
+++ b/css/style.css
@@ -550,6 +550,140 @@
           box-shadow: 0px 10px 20px 0px rgba(17, 17, 17, 0.1);
 }
 
+.reviews {
+  padding-top: 169px;
+  position: relative;
+}
+
+.reviews__background {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  z-index: -5;
+  padding: 40px;
+  width: 100%;
+  height: 649px;
+  background: #2B7AF1;
+}
+
+.reviews__next,
+.reviews__prev {
+  cursor: pointer;
+  position: absolute;
+  z-index: 2;
+  top: 475px;
+}
+
+.reviews__next {
+  right: 184px;
+}
+
+.reviews__prev {
+  left: 184px;
+}
+
+.reviews__title {
+  padding-top: 100px;
+  color: #ffffff;
+  font-size: 36px;
+  font-weight: 800;
+  line-height: 130%;
+}
+
+.reviews__swiper-wrapper {
+  padding-top: 50px;
+}
+
+.reviews__slide {
+  display: grid;
+  grid-template-columns: 2fr 1fr 2fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  padding: 40px;
+  -webkit-transition: 0.9s;
+  transition: 0.9s;
+  width: 630px;
+  height: 292px;
+  border-radius: 10px;
+  background: #FFF;
+}
+
+.reviews__slide-title {
+  grid-column: 1/3;
+  color: #2B7AF1;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.reviews__slide-icon {
+  justify-self: end;
+  grid-column: 3/4;
+}
+
+.reviews__slide-subtitle {
+  grid-column: 1/4;
+  grid-row: 2/3;
+  font-family: Open Sans;
+  font-weight: 400;
+}
+
+.reviews__slide-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 5px;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+}
+
+.reviews__slide-name {
+  color: #2B7AF1;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 130%;
+}
+
+.reviews__slide-city {
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 130%;
+}
+
+.reviews__slide-date {
+  grid-column: 3/4;
+  align-self: flex-end;
+  justify-self: end;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.reviews__pagination {
+  padding: 60px 31.1vw;
+}
+
+.swiper-pagination-bullet {
+  width: 10px;
+  height: 10px;
+}
+
+.swiper-pagination-bullet-active {
+  width: 20px;
+  height: 10px;
+  border-radius: 100px;
+  background: -webkit-gradient(linear, left top, right top, color-stop(0.2%, #FF7A00), color-stop(99.82%, #FFB039));
+  background: linear-gradient(90deg, #FF7A00 0.2%, #FFB039 99.82%);
+}
+
 .body--opened-modal {
   overflow: hidden;
 }
