--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,9 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.nav--header {
   padding-top: 40px;
 }
 
@@ -86,7 +89,7 @@
       -ms-flex-align: center;
           align-items: center;
   width: 150px;
-  height: 60px;
+  height: 50px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
   border-radius: 10px;
@@ -730,11 +733,27 @@
   padding-top: 100px;
 }
 
+.footer__filter {
+  position: absolute;
+  height: 557px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  background-color: rgba(17, 17, 17, 0.5019607843);
+}
+
 .footer__background {
   position: absolute;
   bottom: 0px;
   left: 0px;
-  z-index: -1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: bottom;
+     object-position: bottom;
+  z-index: -2;
   width: 100%;
   height: 557px;
 }
