--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -2,15 +2,29 @@
     position: relative;
     padding-top: 100px;
 } 
+.footer__filter{
+    position: absolute;
+    height: 557px;
+    flex-shrink: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    background-color:#11111180;
+
+}
 .footer__background {
     position: absolute;
     bottom: 0px;
     left: 0px;
-    z-index: -1;
+    object-fit: cover;
+    object-position: bottom;
+    z-index: -2;
     width: 100%;
     height: 557px;
-    
+
 }
+
 
 .footer__wrapper {
     display: flex;
