--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,45 @@
   background: #111;
 }
 
+.nav__list-mobail {
+  display: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 38px;
+}
+
+.nav__list-item {
+  position: relative;
+  cursor: pointer;
+}
+
+.nav_list-burger,
+.nav_list-burger::before,
+.nav_list-burger::after {
+  display: block;
+  width: 30px;
+  height: 3px;
+  border-radius: 100px;
+  background: #000000;
+}
+
+.nav_list-burger::before,
+.nav_list-burger::after {
+  content: "";
+  position: absolute;
+}
+
+.nav_list-burger::before {
+  top: 6px;
+}
+
+.nav_list-burger::after {
+  top: -6px;
+}
+
 .nav__list-contact {
+  color: #ffffff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -126,6 +164,9 @@
       -ms-flex-align: center;
           align-items: center;
   gap: 20px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
 }
 
 .nav__list-img {
@@ -146,6 +187,17 @@
   background: #ffffff;
 }
 
+.nav__list-contact-mail,
+.nav__list-contact-tell {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .nav__list-cosial {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -156,12 +208,17 @@
           align-items: center;
 }
 
+.header {
+  position: relative;
+}
+
 .header__background {
   position: absolute;
   top: 0px;
   right: 0px;
   z-index: -5;
-  width: 51vw;
+  width: 100%;
+  width: 52vw;
   height: 810px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
@@ -169,16 +226,20 @@
   background: #2B7AF1;
 }
 
-.header__img {
-  position: absolute;
-  top: 140px;
-  right: 0px;
-  border-radius: 10px 0px 0px 10px;
-  -webkit-box-shadow: 0px 10px 20px 0px rgba(17, 17, 17, 0.1019607843);
-          box-shadow: 0px 10px 20px 0px rgba(17, 17, 17, 0.1019607843);
-  width: 100%;
-  max-width: 1155px;
-  height: 473px;
+.header__hero-wrapper {
+  padding-top: 63px;
+  padding-left: 15px;
+  margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 40px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .header__hero {
@@ -192,9 +253,8 @@
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  padding-top: 136px;
   gap: 8px;
-  max-width: 413px;
+  max-width: 390px;
 }
 
 .header__hero-title {
@@ -212,19 +272,48 @@
   margin-top: 27px;
 }
 
+.header__hero-img {
+  width: 100%;
+  max-width: 61%;
+}
+
+.header__img {
+  top: 140px;
+  right: 0px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 10px 0px 0px 10px;
+  -webkit-box-shadow: 0px 10px 20px 0px rgba(17, 17, 17, 0.1019607843);
+          box-shadow: 0px 10px 20px 0px rgba(17, 17, 17, 0.1019607843);
+  width: 100%;
+  height: 473px;
+}
+
+.header__hero-img-fil {
+  display: none;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px 0px 0px 10px;
+}
+
 .header__cards {
-  padding-top: 190px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  width: 100%;
+  padding-top: 67px;
+  display: grid;
+  grid-template-columns: repeat(4, 23.5%);
+  grid-template-rows: auto;
   gap: 20px;
 }
 
 .header__cards-bloc {
-  width: 305px;
+  max-width: 305px;
   height: 231px;
-  -ms-flex-negative: 0;
-      flex-shrink: 0;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
   border-radius: 10px;
   background: #ffffff;
   -webkit-box-shadow: 0px 5px 20px 0px rgba(17, 17, 17, 0.3019607843);
@@ -252,6 +341,10 @@
   font-family: Open Sans;
   font-size: 16px;
   font-weight: 400;
+}
+
+.header__cards-text--4 {
+  display: none;
 }
 
 .apartments {
@@ -608,20 +701,8 @@
   background: #2B7AF1;
 }
 
-.reviews__next,
-.reviews__prev {
-  cursor: pointer;
-  position: absolute;
-  z-index: 2;
-  top: 475px;
-}
-
-.reviews__next {
-  right: 184px;
-}
-
-.reviews__prev {
-  left: 184px;
+.container--reviews {
+  padding: 0 30px 0;
 }
 
 .reviews__title {
@@ -630,6 +711,27 @@
   font-size: 36px;
   font-weight: 800;
   line-height: 130%;
+}
+
+.reviews__swiper {
+  position: relative;
+}
+
+.reviews__next,
+.reviews__prev {
+  cursor: pointer;
+  position: absolute;
+  top: 150px;
+  right: 1px;
+  z-index: 2;
+}
+
+.reviews__next {
+  right: 1px;
+}
+
+.reviews__prev {
+  left: 1px;
 }
 
 .reviews__swiper-wrapper {
@@ -751,8 +853,8 @@
   left: 0px;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: bottom;
-     object-position: bottom;
+  -o-object-position: 50% 55%;
+     object-position: 50% 55%;
   z-index: -2;
   width: 100%;
   height: 557px;
@@ -809,6 +911,7 @@
 }
 
 .footer__window-input--big {
+  padding: 10px 0px 22% 20px;
   height: 115px;
 }
 
@@ -1016,4 +1119,206 @@
 
 .button--modal {
   margin-top: 20px;
+}
+
+@media (max-width: 1250px) {
+  .nav__list {
+    display: none;
+  }
+  .nav__list-mobail {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .nav--header {
+    padding-top: 15px;
+  }
+  .header__background {
+    width: 70vw;
+    height: 509px;
+  }
+  .header__hero-title {
+    font-size: 20px;
+  }
+  .header__hero-subtitle {
+    font-family: Open Sans;
+    font-size: 14px;
+  }
+  .button--header {
+    font-size: 14px;
+    padding: 10px 30px;
+  }
+  .header__hero-img {
+    max-width: 1140px;
+  }
+  .header__hero-img .header__img {
+    height: 257px;
+  }
+  .header__cards {
+    gap: 15;
+  }
+}
+@media (max-width: 930px) {
+  .nav__list-img img {
+    width: 15px;
+  }
+  .nav__list-circle {
+    bottom: -6px;
+    left: -8px;
+    width: 30px;
+    height: 30px;
+  }
+  .nav__list-contact .button {
+    width: 145px;
+    height: 30px;
+    padding: 8px 20px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .nav__list-contact .button__link {
+    font-size: 12px;
+  }
+  .header__hero-wrapper {
+    gap: 1%;
+  }
+  .header__cards-icon {
+    width: 100px;
+    height: 100px;
+  }
+  .header__cards {
+    gap: 10px;
+  }
+}
+@media (max-width: 790px) {
+  .maill,
+  .nav__list-mail {
+    display: none;
+  }
+  .header__background {
+    width: 57vw;
+  }
+  .header__cards {
+    grid-template-columns: repeat(3, 32.4%);
+    grid-template-rows: auto;
+    gap: 10px;
+  }
+  .header__cards-bloc--4 {
+    max-width: 100%;
+    height: 100px;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    grid-column: 1/4;
+  }
+  .header__cards-bloc--4 .header__cards-icon {
+    padding-top: 0px;
+    width: 60px;
+    height: 60px;
+  }
+  .header__cards-bloc--4 .header__cards-text {
+    padding-top: 0px;
+  }
+  .header__cards-text {
+    padding-top: 20px;
+  }
+}
+@media (max-width: 650px) {
+  .maill {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .nav__list-tell {
+    display: none;
+  }
+  .nav__list-contact .button {
+    display: none;
+  }
+  .header__background {
+    width: 50vw;
+  }
+  .header__hero-wrapper {
+    margin-left: 0px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 0px;
+  }
+  .header__hero-wrapper .header__hero {
+    color: #FFF;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .header__hero-img {
+    position: absolute;
+    top: 85px;
+    z-index: -2;
+    max-width: 98%;
+  }
+  .header__hero-img .header__hero-img-fil {
+    display: block;
+    background: rgba(17, 17, 17, 0.5019607843);
+  }
+  .header__cards {
+    padding-top: 150px;
+  }
+}
+@media (max-width: 430px) {
+  .header__background {
+    width: 40vw;
+  }
+  .header__cards {
+    grid-template-columns: repeat(2, 49.4%);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 10px;
+  }
+  .header__cards .header__cards-bloc--3 {
+    grid-column: 1/2;
+  }
+  .header__cards .header__cards-bloc--4 {
+    max-width: 305px;
+    height: 231px;
+    -ms-flex-negative: 1;
+        flex-shrink: 1;
+    border-radius: 10px;
+    background: #ffffff;
+    -webkit-box-shadow: 0px 5px 20px 0px rgba(17, 17, 17, 0.3019607843);
+            box-shadow: 0px 5px 20px 0px rgba(17, 17, 17, 0.3019607843);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    grid-column: 2/2;
+  }
+  .header__cards .header__cards-bloc--4 .header__cards-text {
+    display: none;
+  }
+  .header__cards .header__cards-bloc--4 .header__cards-text--4 {
+    display: block;
+  }
+  .header__cards .header__cards-icon {
+    width: 100px;
+    height: 100px;
+    padding-top: 40px;
+  }
+  .header__cards .header__cards-text {
+    padding-top: 10px;
+  }
 }
