--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -18,7 +18,7 @@
     bottom: 0px;
     left: 0px;
     object-fit: cover;
-    object-position: bottom;
+    object-position: 50% 55%;
     z-index: -2;
     width: 100%;
     height: 557px;
@@ -47,6 +47,7 @@
     font-weight: 700;
     padding-top: 40px;
     
+    
 
 }
 .footer__window-form {
@@ -67,6 +68,7 @@
     padding-left: 20px;
 }
 .footer__window-input--big{
+    padding: 10px 0px 22% 20px;
     height: 115px;
 }
 
@@ -102,6 +104,7 @@
 .footer__info-name {
     display: flex;
     flex-direction: column;
+
     h5{color: #2B7AF1;
         font-feature-settings: 'liga' off;  
         font-size: 18px;
