--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,37 +1,36 @@
 
-
+.header{
+    position: relative;
+}
 .header__background{
     position: absolute;
     top: 0px;
     right: 0px;
     z-index: -5;
-    width: 51vw;
+    width: 100%;
+    width: 52vw;
     height: 810px;
     flex-shrink: 0;
     border-radius: 0px 0px 0px 10px;
     background: $general-color
 }
-.header__img{
-    position: absolute;
-    top: 140px;
-    right: 0px;
-    border-radius: 10px 0px 0px 10px;
-    box-shadow: 0px 10px 20px 0px #1111111a;
-    width: 100%;
-    max-width:1155px ;
-    
-    height: 473px;
-    
-}
 // ==============================================
-
+.header__hero-wrapper{
+    // max-width: 1500px;
+    padding-top: 63px;
+    padding-left: 15px;
+    margin-left: auto;
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    justify-content: flex-end;
+}
 .header__hero{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding-top: 136px;
     gap: 8px;
-    max-width: 413px;
+    max-width: 390px;
 }
 .header__hero-title{
     font-size: 40px;
@@ -45,16 +44,42 @@
 .button--header{
     margin-top: 27px;
 }
+.header__hero-img{
+    width: 100%;
+    max-width: 61%;
+}
+.header__img{
+    top: 140px;
+    right: 0px;
+    object-fit: cover;
+    border-radius: 10px 0px 0px 10px;
+    box-shadow: 0px 10px 20px 0px #1111111a;
+    width: 100%;
+    height: 473px;
+}
+.header__hero-img-fil{
+    display: none;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px 0px 0px 10px;
+}
 // ==============================================
 .header__cards {
-    padding-top: 190px;
-    display: flex;
+    width: 100%;
+    padding-top: 67px;
+    display: grid;
+    grid-template-columns: repeat(4, 23.5%);
+    grid-template-rows: auto;
     gap: 20px;
 }
 .header__cards-bloc {
-    width: 305px;
+    max-width: 305px;
     height: 231px;
-    flex-shrink: 0;
+    flex-shrink: 1;
     border-radius: 10px;
     background: #ffffff;
     box-shadow: 0px 5px 20px 0px #1111114d;
@@ -68,12 +93,16 @@
 
 }
 .header__cards-text {
+
     max-width: 256px;
     padding-top: 26px;
     text-align: center;
     font-family: Open Sans;
     font-size: 16px;
     font-weight: 400;
+}
+.header__cards-text--4{
+    display: none;
 }
 
 
